Resolved some layout issues.

--- a/timegrid/trunk/src/webapp/api/styles/themes/theme-sandy-stone-beach-ocean-diver.css
+++ b/timegrid/trunk/src/webapp/api/styles/themes/theme-sandy-stone-beach-ocean-diver.css
@@ -8,16 +8,16 @@
     #002f2f
  */
 
-span.timegrid-tab {
+div.timegrid-tab {
     background-color: #efecca;
 }
 
-span.timegrid-tab-active {
+div.timegrid-tab-active {
     background-color: #a7a37e;
     font-weight: bold;
 }
 
-span.timegrid-tab a {
+div.timegrid-tab a {
     text-decoration: none;
 }
  
